<resources>
    <string name="app_name">My Application Server</string>
    <string name="server">Server</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="server_ip">Server IP</string>
    <string name="server_port">Server Port</string>
    <string name="status">Status</string>
    <string name="not_connected">not connected</string>
    <string name="list">list</string>
</resources>